# hotwire-vllm

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: test.yml
benchmarks/: bench_decode.py
hotwire/: __init__.py  _bank.py  _kernel.py  _patch.py  _state.py  verify.py  wire.py
tests/: test_bank.py  test_fill.py  test_integration_vllm.py  test_kernel.py  test_state.py  test_wire.py
