[project]
name = "hotwire-vllm"
version = "0.0.1"
description = "CUDA-graph-safe activation steering plugin for vLLM"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[project.entry-points."vllm.general_plugins"]
hotwire = "hotwire:register"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hotwire"]
