[project]
name = "hotwire-vllm"
version = "0.0.2"
description = "CUDA-graph-safe activation steering plugin for vLLM"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = ["numpy"]

[project.optional-dependencies]
dev = ["pytest"]

[project.entry-points."vllm.general_plugins"]
hotwire = "hotwire:register"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = ["virtualenvs", ".idea", "dist", "*.egg-info", "tests/__pycache__"]

[tool.hatch.build.targets.wheel]
packages = ["hotwire"]
force-include = {"hotwire/AGENTS.md" = "hotwire/AGENTS.md"}

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: spins up a real vLLM engine (slow, needs GPU + vllm installed)",
]
addopts = "-m 'not integration'"

